syntax = "proto3";

package order;

service OrderService {
  rpc Create (CreateOrderRequest) returns (OrderResponse);
  rpc GetAll (GetOrderRequest) returns (OrderResponse);
  rpc GetById (GetOrderByIdRequest) returns (OrderResponse);
  rpc Delete (DeleteOrderRequest) returns (DeleteOrderResponse);
}

message OrderResponse {
  int32 id = 1;
  int32 totalItems = 2;
  float totalPrice = 3;
  string status = 4;
  string createdAt = 5;
  string updatedAt = 6;
  int32 userId = 7;
}

message CreateOrderRequest {
  int32 userId = 1;
}

message GetOrderRequest {
  int32 id = 1;
}

message GetOrderByIdRequest {
  int32 id = 1;
}

message UpdateOrderRequest {
  int32 id = 1;
  int32 totalItems = 2;
  float totalPrice = 3;
  string status = 4;
}

message DeleteOrderRequest {
  int32 id = 1;
}

message DeleteOrderResponse {
  bool success = 1;
}
